Оновлення БД, оновлення моделей, оновлення API, додавання нового функціоналу

--- a/ExpenseTracker.Web/Pages/Auth/Register.cshtml
+++ b/ExpenseTracker.Web/Pages/Auth/Register.cshtml
@@ -103,7 +103,7 @@
         <label for="Token">Токен</label>
         <input type="text" id="Token" name="Token" value="@Model.Token" required />
         <div class="token-info">
-            <a href="https://api.monobank.ua/docs/index.html#tag/Kliyentski-personalni-dani/paths/~1personal~1client-info/get" target="_blank">Як його дізнатися?</a>
+            <a href="https://api.monobank.ua/index.html" target="_blank">Як його дізнатися?</a>
         </div>
 
         <button type="submit">Зареєструватися</button>
